<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVerticalStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVerticalEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsernameLoginF"
        style="@style/MaterialTextInputLayout"
        android:hint="@string/username"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/tilPasswordLoginF"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUsernameLoginF"
            android:layout_width="@dimen/default_input_field_width"
            android:layout_height="@dimen/default_input_field_height" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordLoginF"
        style="@style/MaterialTextInputLayout"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/tilUsernameLoginF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPasswordLoginF"
            android:layout_width="@dimen/default_input_field_width"
            android:layout_height="@dimen/default_input_field_height"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/tvNoAccount"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/tilPasswordLoginF" />

    <TextView
        android:id="@+id/tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/no_account"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/tvNoAccount" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/pbLoginLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ProgressBar-->
    <!--        android:id="@+id/pbLoginLoading"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"-->
    <!--        app:layout_constraintStart_toStartOf="@id/glVerticalStart"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>