<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVerticalStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVerticalEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsernameSignUpF"
        style="@style/MaterialTextInputLayout"
        android:hint="@string/username"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/tilEmailSignUpF"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUsernameSignUpF"
            android:layout_width="@dimen/default_input_field_width"
            android:layout_height="@dimen/default_input_field_height" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--        <com.google.android.material.textfield.TextInputLayout-->
    <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:hint="@string/firstname"-->
    <!--            app:errorEnabled="true">-->

    <!--            <com.google.android.material.textfield.TextInputEditText-->
    <!--                android:id="@+id/tietFirstnameSignUpF"-->
    <!--                android:layout_width="@dimen/default_input_field_width"-->
    <!--                android:layout_height="@dimen/default_input_field_height"/>-->
    <!--        </com.google.android.material.textfield.TextInputLayout>-->

    <!--        <com.google.android.material.textfield.TextInputLayout-->
    <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:hint="@string/lastname"-->
    <!--            app:errorEnabled="true">-->

    <!--            <com.google.android.material.textfield.TextInputEditText-->
    <!--                android:id="@+id/tietLastnameSignUpF"-->
    <!--                android:layout_width="@dimen/default_input_field_width"-->
    <!--                android:layout_height="@dimen/default_input_field_height" />-->
    <!--        </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailSignUpF"
        style="@style/MaterialTextInputLayout"
        android:hint="@string/email"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/tilPasswordSignUpF"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/tilUsernameSignUpF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmailSignUpF"
            android:layout_width="@dimen/default_input_field_width"
            android:layout_height="@dimen/default_input_field_height" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--        <com.google.android.material.textfield.TextInputLayout-->
    <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:hint="@string/phonenumber"-->
    <!--            app:errorEnabled="true">-->

    <!--            <com.google.android.material.textfield.TextInputEditText-->
    <!--                android:id="@+id/tietPhonenumberSignUpF"-->
    <!--                android:layout_width="@dimen/default_input_field_width"-->
    <!--                android:layout_height="@dimen/default_input_field_height" />-->
    <!--        </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordSignUpF"
        style="@style/MaterialTextInputLayout"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/tilConfirmPasswordSignUpF"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/tilEmailSignUpF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPasswordSignUpF"
            android:layout_width="@dimen/default_input_field_width"
            android:layout_height="@dimen/default_input_field_height"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPasswordSignUpF"
        style="@style/MaterialTextInputLayout"
        android:hint="@string/password_confirm"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/tilPasswordSignUpF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietConfirmPasswordSignUpF"
            android:layout_width="@dimen/default_input_field_width"
            android:layout_height="@dimen/default_input_field_height"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="@dimen/default_input_field_width"
        android:layout_height="@dimen/default_input_field_height"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPasswordSignUpF" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/pbSignUpLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="10dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>